--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="images/Elise_Spear_Resume.pdf">Resume<br />
+										<h2><a href="https://rpubs.com/EliseSpear/932979">Creating A Buy Signal<br /> in R<br />
 										</a></h2>
 									</header>
-									<a href="images/Elise_Spear_Resume.pdf" class="image fit"><img src="images/resume_pic.jpg" alt="" /></a>
-									<p></p>
+									<a href="https://rpubs.com/EliseSpear/932979" class="image fit"><img src="images/stock_chart.jpg" alt="" /></a>
+									<p>Creating a buy signal for Walmart stock in R using the quantmod package.</p>
 									<ul class="actions special">
-										<li><a href="images/Elise_Spear_Resume.pdf" class="button">View</a></li>
+										<li><a href="https://rpubs.com/EliseSpear/932979" class="button">View</a></li>
 									</ul>
 								</article>
 								<article>
